# waylay-sdk-py

./: LICENSE.txt  Makefile  README.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  deps.yml
docs/: example.md
requirements/: requirements.3.10.txt  requirements.3.11.txt  requirements.3.12.txt  requirements.3.13.txt  requirements.3.9.txt  requirements.all.3.10.txt  requirements.all.3.11.txt  requirements.all.3.12.txt  requirements.all.3.9.txt  requirements.build.3.10.txt  requirements.build.3.11.txt  requirements.build.3.12.txt  requirements.build.3.13.txt  requirements.build.3.9.txt  requirements.dev.3.10.txt  requirements.dev.3.11.txt  requirements.dev.3.12.txt  requirements.dev.3.13.txt  requirements.dev.3.9.txt
src/waylay/: __version__.py  client.py  exceptions.py
src/waylay/api/: __init__.py  api_client.py  api_config.py  api_exceptions.py  rest.py
src/waylay/sdk/: __init__.py  __version__.py  _loader.py  _version.py  auth_interactive.py  client.py  config.py  exceptions.py  service.py
src/waylay/sdk/api/: __init__.py  _models.py  api_client.py  api_config.py  api_exceptions.py  client.py  constants.py  exceptions.py  http.py  httpx_types.py  response.py  rest.py  serialization.py
src/waylay/sdk/auth/: __init__.py  exceptions.py  interactive.py  model.py  parse.py  provider.py
src/waylay/sdk/config/: __init__.py  client.py  model.py
src/waylay/sdk/plugin/: __init__.py  base.py  client.py  loader.py  type_stubs.py
src/waylay/sdk/services/: gateway.py
src/waylay/services/: _base.py  _loader.py
test/integration/: conftest.py  fixtures.py  test_auth.py  test_client.py
test/plugin/: pyproject.toml
test/plugin/src/waylay/sdk_test/: __init__.py  loader.py  plugins.py
test/unit/: auth_test.py  config_test.py  conftest.py  context_mgmt_test.py  fixtures.py  iter_event_stream_test.py  plugin_test.py  provider_test.py
test/unit/__snapshots__/: iter_event_stream_test.ambr
test/unit/api/: __init__.py  api_client_test.py  example_model.py  models_test.py
test/unit/api/__snapshots__/: api_client_test.ambr
test/unit/api/example/: pet_fixtures.py  pet_model.py
test/unit/services/: gateway_test.py
waylay/: __init__.py  auth.py  auth_interactive.py  client.py  config.py  exceptions.py
waylay/api/: __init__.py  api_client.py  api_config.py  api_exceptions.py  api_response.py  rest.py
waylay/service/: __init__.py  api_client.py  api_response.py  base.py  configuration.py  exceptions.py  rest.py
waylay/service/registry/: __init__.py
