[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "waylay-sdk"
version = "0.0.5"
description = "Waylay Python SDK."
requires-python = ">=3.9"
keywords = ["waylay", "sdk"]
readme = "README.md"
authors = [{name = "Waylay", email = "info@waylay.io"}]
license={file = "LICENSE.txt"}
dependencies = [
    "httpx",
    "appdirs",
    "python-jose",
    "python_dateutil",
    "typing_extensions >= 4.10.0",
    "typeguard",
    "jsonpath-ng",
    "pydantic >= 2.6.0",
    "eval-type-backport ~= 0.1.3; python_version < '3.10'",

    # waylay services
    "waylay-sdk-alarms",
    "waylay-sdk-data",
    "waylay-sdk-registry",
    "waylay-sdk-resources",
    "waylay-sdk-rules",
    "waylay-sdk-storage",
]

[project.urls]
Homepage = "https://www.waylay.io/"
Documentation = "https://docs.waylay.io/#/"
Repository = "https://github.com/waylayio/waylay-sdk-py.git"

[project.entry-points.dynamic]
"waylay_sdk_plugins"= "waylay.sdk.plugin.loader:PLUGINS"


[tool.setuptools.package-data]
waylay = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["waylay*"]
exclude = []
namespaces = true

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-httpx",
    "pytest-asyncio",
    "starlette",
    "syrupy",
    "ruff",
    'mypy',
    'types-python-jose',
    'types-appdirs',
    'types-python-dateutil',
    'docformatter',
    'pre-commit',
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "test/**/*.py"]

[tool.ruff.lint]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:"
]