[build-system]
requires = ["setuptools", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "waylay-sdk-core"
dynamic = ["version"]
description = "Waylay Python SDK."
requires-python = ">=3.10"
keywords = ["waylay", "sdk"]
readme = "README.md"
authors = [{name = "Waylay", email = "info@waylay.io"}]
license={file = "LICENSE.txt"}
dependencies = [
    "httpx",
    "appdirs",
    "pyjwt",
    "python_dateutil",
    "typing_extensions >= 4.10.0",
    "typeguard",
    "jsonpath-ng",
    "pydantic >= 2.6.0",
    "waylay-beta==0.0.999",
]

[project.urls]
Homepage = "https://www.waylay.io/"
Documentation = "https://docs.waylay.io/#/"
Repository = "https://github.com/waylayio/waylay-sdk-py.git"

[project.entry-points.dynamic]
"waylay_sdk_plugins"= "waylay.sdk.plugin.loader:PLUGINS"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.package-data]
waylay = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["waylay*"]
exclude = []
namespaces = true

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-httpx",
    "pytest-asyncio",
    "starlette",
    "numpy",
    "syrupy",
    "ruff",
    'mypy!=1.11.*',
    'pyjwt',
    'types-appdirs',
    'types-python-dateutil',
    'pre-commit',
    'sse-starlette',
    "pdoc",
    "pyright>=1.1.408",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "test/**/*.py"]

[tool.ruff.lint]
extend-select = ["E", "F", "UP", "B", "SIM", "I", "D", "PLE", "D","FA","PIE","RET","RUF","S","ARG","PT", "TC"]
ignore = [
    "D203",    # blank line required before class docstring
    "D213",    # multi-line-summary-second-line
]

[tool.ruff.lint.isort]
from-first = false
known-first-party = ["waylay*"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"**/test/**/*.py" = [
    "D",  # no docstyle required
    "S",  # disable security rules for tests
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:"
]

[tool.pyright]
include = ["src", "test"]